--- a/Web.config
+++ b/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 
 <!--
   For more information on how to configure your ASP.NET application, please visit
@@ -12,6 +12,8 @@
       <httpRuntime targetFramework="4.0" />
     </system.web>
   <connectionStrings>
-    <add name="ASPProject" connectionString="Data Source=.;Initial Catalog=SQLProject;Integrated Security=True"/>
+    <add name="ASPProject" connectionString="Data Source=.;Initial Catalog=SQLProject;Integrated Security=True" />
+    <add name="SQLProjectConnectionString" connectionString="Data Source=.;Initial Catalog=SQLProject;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
